configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myenv
spec:
  containers:
  - name: myenv
    image: nginx
