drainpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: draintestpod
spec:
  containers:
  - name: www
    image: nginx
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: draintest
                operator: "In"
                values:
                  - yess
