ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: myds
spec:
  selector:
    matchLabels:
      name: prometheus
  template:
    metadata:
      labels:
        name: prometheus
    spec:
      containers:
      - name: logsvr
        image: ubuntu/prometheus
        ports:
        - containerPort: 80
