secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysecret
spec:
  restartPolicy: OnFailure
  containers:
  - name: sectest
    image: centos:7
    command:
      - env
