side.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi
spec:
  containers:
  - name: websvr
    image: nginx
    ports:
      - containerPort: 80
  - name: webcheck
    image:  centos:7
    command:
      - ping
      - "localhost"
