use-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: use-pvc
spec:
  containers:
  - name: web
    image: nginx
    volumeMounts:
      - name: testvol
        mountPath: /test


  volumes:
    - name: testvol
      persistentVolumeClaim:
        claimName: mypvc
