vol1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myvol1
spec:
  containers:
  - name: cowsay
    image: smlinux/cowsay-web
    volumeMounts:
    - name:  cachevol
      mountPath:  /webdata
  - name:  websvr
    image:  nginx
    volumeMounts:
      - name:  cachevol
        mountPath:  /usr/share/nginx/html
        readOnly: true
  volumes:
    - name:  cachevol
      emptyDir: {}
