vol2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myvol2
spec:
  containers:
  - name: www
    image: nginx
    volumeMounts:
      - name: hostvol
        mountPath: /kms123


  volumes:
    - name: hostvol
      hostPath:
        path: /mnt
        type: Directory
