vol3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myvol3
spec:
  containers:
  - name: www
    image: nginx
    volumeMounts:
      - name: hostvol
        mountPath: /kms123


  volumes:
    - name: hostvol
      hostPath:
        path: /lunch12
        type: DirectoryOrCreate
