hpa-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-test
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: testbed
        image: kubetm/app:v1
        resources:
          limits:
            cpu: "50m"
          requests:
            cpu: "20m"

---

kind: Service
apiVersion: v1
metadata:
  name:  hpa-svc
spec:
  selector:
    app:  myapp
  type:  NodePort
  ports:
  - name:  name-of-the-port
    port:  8080
    targetPort:  8080
    nodePort: 30000
