lb.yaml
kind: Service
apiVersion: v1
metadata:
  name:  lbsvc
spec:
  selector:
    app:  web-svr3
  type:  LoadBalancer
  ports:
  - port:  80
    targetPort:  80
    protocol: TCP
