svc1.yaml
kind: Service
apiVersion: v1
metadata:
  name:  mysvc
spec:
  selector:
    app:  web-svr
  ports:
  - port:  80
    targetPort:  80
    protocol: TCP
