svc2.yaml
kind: Service
apiVersion: v1
metadata:
  name: noedsvc
spec:
  selector:
    label:  web-svr2
  type: NodePort
  ports:
  - port:  80
    targetPort:  80
    protocol: TCP
    nodePort: 30003
