svc4.yaml
kind: Service
apiVersion: v1
metadata:
  name: exdb
spec:
  type:  ExternalName
  externalName: www.google.co.kr
