use-pvc-dynamic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: www
        image: nginx:1.12
        volumeMounts:
          - name:  webpage
            mountPath:  /usr/share/nginx/html
      volumes:
        - name:  webpage
          persistentVolumeClaim:
            claimName: pvc-dynamic-nfs

---

kind: Service
apiVersion: v1
metadata:
  name:  websvc
spec:
  selector:
    app:  myapp
  type:  LoadBalancer
  ports:
  - port:  80
    targetPort:  80
    protocol: TCP
