ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  tls:
    - secretName: https
  ingressClassName: nginx
  rules:
  - host: www.kms1.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-main-scv
            port: 
              number: 80
      - pathType: Prefix
        path: "/hospital"
        backend:
          service:
            name: nginx-green-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/jumin"
        backend:
          service:
            name: nginx-blue-svc
            port: 
              number: 80
  - host: www.hpe2008.co.kr
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: httpd-main-svc
              port: 
                number: 80
